--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ Flask==3.0.3
 gunicorn==22.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
+Markdown==3.7
 MarkupSafe==2.1.5
 packaging==24.0
 Werkzeug==3.0.3
